lldpd (1.0.19)
 * Changes:
   + Support of both Apple Silicon and Intel for macOS package.
   + Add cvlan/svlan/tpmr capabilities.
   + Disable LLDP in firmware for Intel X7xx cards on FreeBSD.
   + Do not query stats for a down interface on Linux.
   + Fix AppArmor policy for /run/lldpd/lldpd.socket.lock.

lldpd (1.0.18)
 * Changes (breaking):
   + Remove support for building 802.3bt TLVs (broken).
 * Fix:
   + Fix memory leaks in EDP/FDP decoding when receiving some TLVs twice.
   + Do not set interface description continuously.
   + Use a different Netlink socket for changes and queries.

lldpd (1.0.17)
 * Fix:
   + Read overflow when parsing CDP addresses. Thanks to Matteo Memelli.
   + Don't output empty lines on configure commands.

lldpd (1.0.16)
 * Fix:
   + Do not use 00:00:00:00:00:00 as chassis ID.
   + Do not busy loop when an interface with a neighbor disappears.

lldpd (1.0.15)
 * Changes
   + Add configure command to override system capabilities. Contributed by
     Ignacio Sanchez Navarro. (#526)
   + An unrecognized ORG TLV is now considered as a custom one. (#536)
 * Fix:
   + Really don't send VLANs when there are too many (#520)
   + Ignore temporary IPv6 addresses (#521)

lldpd (1.0.14)
 * Changes
   + Add configure commands to alter inventory TLVs (#508)
 * Fix:
   + Update seccomp rules for newer kernel/libc (#488)
   + Correctly handle an interface whose index has changed (#490)
   + Don't send VLANs when there are too many (#501)

lldpd (1.0.13)
 * Fix:
   + Add support for 2.5G, 5G, 25G and 50G based Ethernet (#475)
   + Fix link-down detection on OpenBSD (#476)
   + Fix LLDP packets encapsuled in VLAN 0 in some conditions
   + Fix heap overflow when reading SONMP. CVE-2021-43612.
     Thanks to Jeremy Galindo for discovering this one.

lldpd (1.0.12)
  * Fix:
    + Use a dedicated file lock to prevent concurrent changes from lldpcli.
    + Require/display powerpairs for Dot3 power even when device type is PD.
  * Changes: